finished load manager

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -44,6 +44,8 @@
                   <li><a href="{% url 'admin:localinfo_halfhour_changelist' %}"> Medias horas</a></li>
                   <li><a href="{% url 'admin:datamanager_datasourcepath_changelist' %}"> Fuentes de datos</a></li>
                   <li><a href="{% url 'datamanager:loadmanager' %}"> Carga de datos</a></li>
+                  <li><a href="{% url 'admin:datamanager_uploaderjobexecution_changelist' %}"> Historial de carga archivos</a></li>
+                  <li><a href="{% url 'admin:datamanager_uploaderjobexecution_changelist' %}"> Historial de exp. archivos</a></li>
                   <li><a href="{% url 'rq_home' %}"> Cola de carga</a></li>
                 </ul>
               </li>
