--- a/datamanager/templates/datamanager/loadManager.html
+++ b/datamanager/templates/datamanager/loadManager.html
@@ -47,6 +47,15 @@
                 </div>
             {% endfor %}
         </div>
+        {% header "Programa de operación" %}
+        <div class="row">
+            {% for table in operation_program_tables %}
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    {% table html_id=table.id columns=6 with_checker=False as file_table %}
+                    {% panel title_icon=table.title_icon title=table.title body=file_table %}
+                </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
 
