--- a/datamanager/templates/datamanager/modal.html
+++ b/datamanager/templates/datamanager/modal.html
@@ -16,6 +16,9 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                {% if show_ok_button %}
+                    <button type="button" class="btn btn-info" data-dismiss="modal">Aceptar</button>
+                {% endif %}
             </div>
         </div>
     </div>
