we use modals to show warnings and added button to see last execution info

--- a/datamanager/templates/datamanager/loadManager.html
+++ b/datamanager/templates/datamanager/loadManager.html
@@ -57,6 +57,8 @@
             {% endfor %}
         </div>
     </div>
+
+    {% include "datamanager/modal.html" with show_ok_button=True modal_id="modal" %}
 {% endblock %}
 
 {% block js %}
