--- a/datamanager/templates/datamanager/loadManager.html
+++ b/datamanager/templates/datamanager/loadManager.html
@@ -26,7 +26,7 @@
                 background-color: #D9FFC7;
             }
 
-            .btn {
+            tbody .btn {
                 margin-bottom: 0px;
                 font-size: 12px;
                 padding-top: 0px;
