--- a/profile/templates/profile/transfers.html
+++ b/profile/templates/profile/transfers.html
@@ -18,9 +18,9 @@
         {% columns 12 12 12 panel1 %}
     </div>
 
-    {% include "datamanager/modal.html" with modal_id="dayHelp" modal_title="Días disponibles" modal_body="esto es una explicación del filtro de día" %}
     {% include "datamanager/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
     {% include "datamanager/modal.html" with modal_id="tableHelp" modal_title="Expediciones" modal_body="esto es una explicación de la tabla" %}
+    {{ block.super }}
 {% endblock %}
 
 {% block js %}
