show help in trip views and added option to data_filter to hide export data button

--- a/globalstat/templates/globalstat/detail.html
+++ b/globalstat/templates/globalstat/detail.html
@@ -8,7 +8,7 @@
 
     {% include "datamanager/availableDays.html" %}
 
-    {% data_filter data_filter True %}
+    {% data_filter data_filter True show_export_button=False %}
 
     {% tile_stats 4 8 12 tiles_1 %}
 
