--- a/speed/templates/speed/variation.html
+++ b/speed/templates/speed/variation.html
@@ -30,9 +30,9 @@
         </div>
     </div>
 
-    {% include "datamanager/modal.html" with modal_id="dayHelp" modal_title="Días disponibles" modal_body="esto es una explicación del filtro de día" %}
     {% include "datamanager/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
     {% include "datamanager/modal.html" with modal_id="chartHelp" modal_title="Variación de velocidades" modal_body="esto es una explicación del gráfico" %}
+    {{ block.super }}
 {% endblock %}
 
 {% block js %}
