--- a/travel/templates/travel/from_to.html
+++ b/travel/templates/travel/from_to.html
@@ -18,11 +18,11 @@
 {% block content %}
     <div class="">
         {% header "Orígenes y destinos" "Indicadores" %}
-        {% include "datamanager/availableDays.html" %}
+        {% include "datamanager/availableDays.html"  with info_target_id="dayHelp" %}
         {% columns 12 12 12 "<label>Número de etapas:</label><br />"|add:stage_selectors as col1 %}
         {% columns 12 12 12 "<label>Modo de viaje:</label><br />"|add:mode_selectors as col2 %}
         {% with extra_html=col1|add:col2 %}
-            {% data_filter data_filter show_day_filter=True show_day_type_filter=True show_start_trip_period_filter=True show_start_trip_minute_filter=True extra_html=extra_html %}
+            {% data_filter data_filter show_day_filter=True show_day_type_filter=True show_start_trip_period_filter=True show_start_trip_minute_filter=True extra_html=extra_html info_target_id="filterHelp" %}
         {% endwith %}
 
         <div class="row cols-same-height">
@@ -30,11 +30,15 @@
                 {% with map1="<div id='mapChart' style='height:500px;'></div>" map2="<div id='mapChart2' style='height:500px;'></div>" %}
                     {% columns 6 6 12 "<h3>Origen</h3><br />"|add:map1 as col1 %}
                     {% columns 6 6 12 "<h3>Destino</h3><br />"|add:map2 as col2 %}
-                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" col1|add:col2 %}
+                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" col1|add:col2 info_target_id="mapHelp" %}
                 {% endwith %}
             </div>
         </div>
     </div>
+
+    {% include "datamanager/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
+    {% include "datamanager/modal.html" with modal_id="mapHelp" modal_title="Matriz de velocidades" modal_body="esto es una explicación del gráfico" %}
+    {{ block.super }}
 {% endblock %}
 
 {% block js %}
