--- a/travel/templates/travel/large.html
+++ b/travel/templates/travel/large.html
@@ -19,10 +19,9 @@
 
 {% block content %}
     <div class="">
-
         {% header "Viajes por etapas" "Indicadores" %}
-        {% include "datamanager/availableDays.html" %}
-        {% data_filter data_filter True False True True %}
+        {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
+        {% data_filter data_filter True False True True info_target_id="filterHelp" %}
 
         <div class="row cols-same-height">
 
@@ -34,12 +33,15 @@
             {# Map #}
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                 {% with panel_body="<div id='mapChart' style='height:500px;'></div><input type='text' id='dataLimits' name='data_limits' value='' />" %}
-                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" panel_body %}
+                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" panel_body info_target_id="mapHelp" %}
                 {% endwith %}
             </div>
         </div>
-
     </div>
+
+    {% include "datamanager/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
+    {% include "datamanager/modal.html" with modal_id="mapHelp" modal_title="Matriz de velocidades" modal_body="esto es una explicación del gráfico" %}
+    {{ block.super }}
 {% endblock %}
 
 {% block js %}
