--- a/travel/templates/travel/map.html
+++ b/travel/templates/travel/map.html
@@ -16,10 +16,9 @@
 
 {% block content %}
     <div class="">
-
         {% header "Mapa de viajes" "Indicadores" %}
-        {% include "datamanager/availableDays.html" %}
-        {% data_filter data_filter True False True False False False False False False False False False True %}
+        {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
+        {% data_filter data_filter True False True False False False False False False False False False True info_target_id="filterHelp" %}
 
         <div class="row cols-same-height">
             {# Selection Bar #}
@@ -29,11 +28,15 @@
             {# Map #}
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                 {% with panel_body="<div id='mapChart' style='height:500px'></div>" %}
-                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" panel_body title_id="mapTitle" %}
+                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" panel_body title_id="mapTitle" info_target_id="mapHelp" %}
                 {% endwith %}
             </div>
         </div>
     </div>
+
+    {% include "datamanager/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
+    {% include "datamanager/modal.html" with modal_id="mapHelp" modal_title="Mapa" modal_body="esto es una explicación del mapa" %}
+    {{ block.super }}
 {% endblock %}
 
 {% block js %}
