--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -78,7 +78,7 @@
                 <ul class="nav child_menu">
                     <li><a href=" {% url "travel:graphs" %} ">Resumen</a></li>
                     <li><a href=" {% url "travel:map" %} ">Mapa</a></li>
-                    <li><a href=" {% url "travel:large-travels" %} ">Viajes por Etapas</a></li>
+                    <li><a href=" {% url "travel:large-trips" %} ">Viajes por Etapas</a></li>
                     <li><a href=" {% url "travel:from-to" %} ">Orígenes y Destinos</a></li>
                     <li><a href=" {% url "travel:strategies" %} ">Estrategias de Viaje</a></li>
                     {# <li><a href=" {% url "travel:data" %} ">Datos</a></li> #}
