--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -76,12 +76,11 @@
                 <a><i class="fa fa-line-chart"></i> Viajes<span
                     class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                    <li><a href=" {% url "travel:graphs" %} ">Resumen</a></li>
-                    <li><a href=" {% url "travel:map" %} ">Mapa</a></li>
-                    <li><a href=" {% url "travel:large-trips" %} ">Viajes por Etapas</a></li>
-                    <li><a href=" {% url "travel:from-to" %} ">Orígenes y Destinos</a></li>
-                    <li><a href=" {% url "travel:strategies" %} ">Estrategias de Viaje</a></li>
-                    {# <li><a href=" {% url "travel:data" %} ">Datos</a></li> #}
+                    <li><a href=" {% url "trip:graphs" %} ">Resumen</a></li>
+                    <li><a href=" {% url "trip:map" %} ">Mapa</a></li>
+                    <li><a href=" {% url "trip:large-trips" %} ">Viajes por Etapas</a></li>
+                    <li><a href=" {% url "trip:from-to" %} ">Orígenes y Destinos</a></li>
+                    <li><a href=" {% url "trip:strategies" %} ">Estrategias de Viaje</a></li>
                 </ul>
               </li>
               {% endif %}
