--- a/trip/templates/trip/from_to.html
+++ b/trip/templates/trip/from_to.html
@@ -1,4 +1,4 @@
-{% extends 'travel/base.html' %}
+{% extends 'trip/base.html' %}
 {% load static header panel data_filter columns %}
 
 {% block title %}Indicadores: Orígenes y destinos{% endblock %}
@@ -10,9 +10,9 @@
         {# switchery: pretty checkboxes #}
         <link href="{% static gentelella_static|add:"switchery/dist/switchery.min.css" %}" rel="stylesheet">
     {% endwith %}
-    <link href="{% static "travel/css/generic.css" %}" rel="stylesheet">
-    <link href="{% static "travel/css/large.css" %}" rel="stylesheet">
-    <link href="{% static "travel/css/fromto.css" %}" rel="stylesheet">
+    <link href="{% static "trip/css/generic.css" %}" rel="stylesheet">
+    <link href="{% static "trip/css/large.css" %}" rel="stylesheet">
+    <link href="{% static "trip/css/fromto.css" %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -59,9 +59,9 @@
         // console.log(ws_data._half_hours);
         // console.log(ws_data._communes);
     </script>
-    <script src="{% static "travel/js/util.js" %}"></script>
-    <script src="{% static "travel/js/maps.js" %}"></script>
-    <!-- <script src="{% static "travel/js/form.js" %}"></script> -->
-    <script src="{% static "travel/js/travel_fromto_options.js" %}"></script>
-    <script src="{% static "travel/js/travel_fromto.js" %}"></script>
+    <script src="{% static "trip/js/util.js" %}"></script>
+    <script src="{% static "trip/js/maps.js" %}"></script>
+    <!-- <script src="{% static "trip/js/form.js" %}"></script> -->
+    <script src="{% static "trip/js/travel_fromto_options.js" %}"></script>
+    <script src="{% static "trip/js/travel_fromto.js" %}"></script>
 {% endblock %}
