--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -66,7 +66,7 @@
                   <li><a href=" {% url "speed:variation" %} "> variación de velocidades</a></li>
                 </ul>
               </li>
-              <li><a><i class="fa fa-tachometer"></i> Rutas <span class="fa fa-chevron-down"></span></a>
+              <li><a><i class="fa fa-map"></i> Rutas <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a href=" {% url "shape:map" %} "> mapa</a></li>
                 </ul>
