--- a/shape/templates/shape/mapBase.html
+++ b/shape/templates/shape/mapBase.html
@@ -70,6 +70,6 @@
     <script src="{% static "components/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js" %}"></script>
     <script src="{% static "components/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js" %}"></script>
     <script src="{% static "components/BeautifyMarker/leaflet-beautify-marker-icon.js" %}"></script>
-    <script src="{% static "travel/js/map.js" %}"></script>
+    <script src="{% static "trip/js/map.js" %}"></script>
     <script src="{% static "shape/js/mapApp.js" %}"></script>
 {% endblock %}
