--- a/trip/templates/trip/map_selectors.html
+++ b/trip/templates/trip/map_selectors.html
@@ -1,22 +1,19 @@
 <div class="row viz-option-row">
-    <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+    <h4>¿Qué desea visualizar?</h4>
+</div>
+<div class="row viz-option-row">
+    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 form-group">
         <label class="control-label" for="sectorSelector">Sector de Destino:</label>
         <select class="form-control" id='sectorSelector' style="width: 100%">
         </select>
     </div>
-</div>
-<div class="row viz-option-row">
-    <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 form-group">
         <label class="control-label" for="vizSelector">Variable a mostrar:</label>
         <select class="form-control" id='vizSelector' style="width: 100%">
         </select>
     </div>
-</div>
-<div class="row viz-option-row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-6 form-group">
         <label>Escala de colores:</label>
-    </div>
-    <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
         <div class="colorscale_checkbox_div">
             <span class="control-label">Divergente</span>
             <input id="colorscale_checkbox" type="checkbox" />
