--- a/trip/templates/trip/map_selectors.html
+++ b/trip/templates/trip/map_selectors.html
@@ -1,7 +1,9 @@
 <div class="row viz-option-row">
-    <h4>¿Qué desea visualizar?</h4>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h4>¿Qué desea visualizar?</h4>
+    </div>
 </div>
-<div class="row viz-option-row">
+<div class="row">
     <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 form-group">
         <label class="control-label" for="sectorSelector">Sector de Destino:</label>
         <select class="form-control" id='sectorSelector' style="width: 100%">
