--- a/trip/templates/trip/large.html
+++ b/trip/templates/trip/large.html
@@ -21,7 +21,7 @@
     <div class="">
         {% header "Viajes por etapas" "Indicadores" %}
         {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
-        {% data_filter data_filter True False True True info_target_id="filterHelp" %}
+        {% data_filter data_filter True False True True info_target_id="filterHelp" extra_html=stage_selectors %}
 
         <div class="row cols-same-height">
             {# Map and selector bar #}
@@ -47,17 +47,6 @@
         <script src="{% static gentelella_static|add:"switchery/dist/switchery.min.js" %}"></script>
     {% endwith %}
 
-    <script>
-        var ws_data = {};
-        // console.log(ws_data._day_types);
-        // console.log(ws_data._TS_periods);
-        // console.log(ws_data._half_hours);
-        // console.log(ws_data._communes);
-    </script>
-
-    <script src="{% static "trip/js/util.js" %}"></script>
-    <script src="{% static "trip/js/maps.js" %}"></script>
-    <script src="{% static "trip/js/form.js" %}"></script>
-    <script src="{% static "trip/js/travel_large_options.js" %}"></script>
-    <script src="{% static "trip/js/travel_large.js" %}"></script>
+    <script src="{% static "trip/js/map.js" %}"></script>
+    <script src="{% static "trip/js/largeTripApp.js" %}"></script>
 {% endblock %}
