--- a/trip/templates/trip/large_stage_selectors.html
+++ b/trip/templates/trip/large_stage_selectors.html
@@ -32,3 +32,13 @@
         <span class="control-label">5+ etapas</span>
     </div>
 </div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
+    <label>¿Dónde desea asociar el viaje?:</label>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
+    <div class="origin_or_destination_checkbox_div">
+        <span class="control-label">Zona de origen</span>
+        <input id="originOrDestination" type="checkbox"  />
+        <span class="control-label">Zona de destino</span>
+    </div>
+</div>
