--- a/trip/templates/trip/from_to.html
+++ b/trip/templates/trip/from_to.html
@@ -27,10 +27,11 @@
 
         <div class="row cols-same-height">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                {% with map1="<div id='mapChart' style='height:500px;'></div>" map2="<div id='mapChart2' style='height:500px;'></div>" %}
-                    {% columns 6 6 12 "<h3>Origen</h3><br />"|add:map1 as col1 %}
-                    {% columns 6 6 12 "<h3>Destino</h3><br />"|add:map2 as col2 %}
-                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" col1|add:col2 info_target_id="mapHelp" %}
+                {% with map1="<div id='mapChart' style='height:500px;'></div>" %}
+                    {% columns 6 6 6 "<h3>Origen</h3><br />" as col1 %}
+                    {% columns 6 6 6 "<h3>Destino</h3><br />" as col2 %}
+                    {% columns 12 12 12 map1 as col3 %}
+                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" col1|add:col2|add:col3 info_target_id="mapHelp" %}
                 {% endwith %}
             </div>
         </div>
@@ -45,23 +46,8 @@
     {{ block.super }}
     <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
     {% with "components/gentelella/vendors/" as gentelella_static %}
-        {# switchery: pretty checkboxes #}
         <script src="{% static gentelella_static|add:"switchery/dist/switchery.min.js" %}"></script>
     {% endwith %}
-    <script>
-        var ws_data = {};
-        //ws_data._day_types = JSON.parse("{{ daytypes|escapejs }}");
-        //ws_data._TS_periods = {{ timeperiods|safe }};
-        //ws_data._half_hours = {{ halfhours|safe }};
-        //ws_data._communes = {{ communes|safe }};
-        // console.log(ws_data._day_types);
-        // console.log(ws_data._TS_periods);
-        // console.log(ws_data._half_hours);
-        // console.log(ws_data._communes);
-    </script>
-    <script src="{% static "trip/js/util.js" %}"></script>
-    <script src="{% static "trip/js/maps.js" %}"></script>
-    <!-- <script src="{% static "trip/js/form.js" %}"></script> -->
-    <script src="{% static "trip/js/travel_fromto_options.js" %}"></script>
-    <script src="{% static "trip/js/travel_fromto.js" %}"></script>
+    <script src="{% static "trip/js/map.js" %}"></script>
+    <script src="{% static "trip/js/fromToApp.js" %}"></script>
 {% endblock %}
