--- a/trip/templates/trip/from_to.html
+++ b/trip/templates/trip/from_to.html
@@ -44,6 +44,7 @@
 {% block js %}
     {{ block.super }}
     <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
+    <script src="{% static "components/Leaflet.Sync/L.Map.Sync.js" %}"></script>
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"switchery/dist/switchery.min.js" %}"></script>
     {% endwith %}
